--- a/src/app/pages/streaming-video/streaming-video.component.html
+++ b/src/app/pages/streaming-video/streaming-video.component.html
@@ -1,5 +1,7 @@
 <div>
-    <video controls>
-        <source src="your-video-source.mp4" type="video/mp4">
+    <video width="1020" height="540" controls>
+        <source src="movie.mp4" type="video/mp4">
+        <source src="movie.ogg" type="video/ogg">
+        Your browser does not support the video tag.
     </video>
 </div>
