Profile under video

--- a/src/app/pages/homepage/home-page/home-page.component.css
+++ b/src/app/pages/homepage/home-page/home-page.component.css
@@ -36,3 +36,13 @@
 .bot-message {
     text-align: left;
 }
+
+.moveLeft10 {
+    margin-left: 319px;
+}
+
+.borderRadiusProfile {
+    border-radius: 15px;
+    width: 1020px;
+    margin-top: -30px;
+}
