Broadcast buttons toegevoegd

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -1,1 +1,33 @@
-<p>broadcast-page works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <!-- Where Chat comes -->
+            <div class="container">
+                <h1>Chat Interface</h1>
+                <div class="chat-container">
+                    <div class="media user-message">
+                        <div class="media-body">
+                            <h5 class="mt-0">User</h5>
+                            <p>Hello, how can I help you?</p>
+                        </div>
+                    </div>
+                    <div class="media bot-message">
+                        <div class="media-body">
+                            <h5 class="mt-0">Bot</h5>
+                            <p>Here is a response from the bot.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="col">
+            <app-streaming-video></app-streaming-video>
+        </div>
+        <div class="col buttonrow">
+            <button class="button" onclick="" value="Start stream" >Start stream</button>
+            <button class="button" onclick="" value="End stream" >End stream</button>
+            <button class="button" onclick="" value="Camera aan" >SeeChange aan</button>
+            <button class="button" onclick="" value="Camera uit" >SeeChange uit</button>
+        </div>
+    </div>
+</div>
