Edited navigation to stream

--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -13,5 +13,6 @@
 
         <p>Id: {{User.id}}</p>
     </div>
-    <a src="#">Bekijk stream</a>
+    <!-- May be edited to specific stream -->
+    <a class="btn-info" routerLink="/Stream">Bekijk stream</a>
 </div>
