camera aan en uit knop

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <!-- Where Chat comes -->
-            <div class="container">
+            
                 <h1>Chat Interface</h1>
                 <div class="chat-container">
                     <div class="media user-message">
@@ -17,13 +17,16 @@
                             <p>Here is a response from the bot.</p>
                         </div>
                     </div>
-                </div>
+                
             </div>
         </div>
         <div class="col">
+            <div class="vidBox">
             <video id="webcam" autoplay></video>
-            <!-- <app-streaming-video>     </app-streaming-video> -->
+            </div>
         </div>
+        </div>
+        <div class="row">
         <div class="col buttonrow">
             <button class="button" onclick="" value="Start stream" >Start stream</button>
             <button class="button" onclick="" value="End stream" >End stream</button>
