--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.css
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.css
@@ -1,8 +1,10 @@
 .chat-container {
-    height: 400px;
+    height: 550px;
     overflow-y: scroll;
     border: 1px solid #ccc;
     padding: 10px;
+    width: 60%;
+    width: fit-content;
 }
 
 .media {
@@ -19,10 +21,12 @@
     background-color: #f5f5f5;
     border-radius: 10px;
     padding: 10px;
+    
 }
 
 .media-body h5 {
     margin-bottom: 5px;
+    
 }
 
 .user-message {
@@ -50,5 +54,9 @@
 }
 .buttonrow{
     margin-top: 1%;
-    margin-left: 30%;
+    margin-left: 20%;
+}
+.vidBox{
+    padding-top: 5%;
+    align-content: center;
 }
