lege methods voor start en end stream

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -28,8 +28,8 @@
         </div>
         <div class="row">
         <div class="col buttonrow">
-            <button class="button" onclick="" value="Start stream" >Start stream</button>
-            <button class="button" onclick="" value="End stream" >End stream</button>
+            <button class="button" (click)="startStream()" value="Start stream" >Start stream</button>
+            <button class="button" (click)="endStream()" value="End stream" >End stream</button>
             <button class="button" (click)="cameraOn()" value="Camera aan" >SeeChange aan</button>
             <button class="button" (click)="cameraOff()" value="Camera uit" >SeeChange uit</button>
         </div>
