--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -4,17 +4,26 @@
         <div class="card-title">
             <h3>{{User.userName}}</h3>
         </div>
+        
     </div>
     <img src="https://cdnb.artstation.com/p/assets/images/images/032/092/715/large/max-white-guy.jpg?1605462631" class="card-img-top" alt="...">
     <div class="card-body">
-        <span *ngIf=User.isOnline>
-            <p>Status: Online <span class="online">●</span></p>
-        </span>
-        <span *ngIf=!User.isOnline>
-            <p>Status: Offline <span class="offline">●</span> </p>
+        <p>
+            Volgers: {{User.followCount}}<br/>
+            <span *ngIf=User.isOnline>
+                Status: Online <span class="online">●</span>
+            </span>
+            <span *ngIf=!User.isOnline>
+                Status: Offline <span class="offline">●</span>
+            </span>
+        </p>
+        <span>
+            
         </span>
         <!-- May be edited to specific stream -->
-        <a class="btn btn-primary" routerLink="/Stream">Bekijk stream</a>
+        <div>
+            <a class="btn btn-primary" routerLink="/Stream">Bekijk stream</a>
+        </div>
     </div>
 
 </div>
