login nieuwe folder

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,7 +9,13 @@
         <input matInput type="password" matInput placeholder="Password" />
       </mat-form-field>
       <button mat-raised-button type="submit">Login</button>
-      <p>Are you an admin click on here <a href="sign">sign up</a></p>
+      <p>
+        Are you an admin click on here
+        <a
+          href="\ProjectTheCircleFrontEnd\Front-End-Circle\src\app\pages\admin\admin-page\admin-page.component.html"
+          >sign up</a
+        >
+      </p>
     </form>
   </mat-card>
 </div>
