--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -9,13 +9,8 @@
         <input matInput type="password" matInput placeholder="Password" />
       </mat-form-field>
       <button mat-raised-button type="submit">Login</button>
-      <p>
-        Are you an admin click on here
-        <a
-          href="\ProjectTheCircleFrontEnd\Front-End-Circle\src\app\pages\admin\admin-page\admin-page.component.html"
-          >sign up</a
-        >
-      </p>
+      <p>Are you an admin click on here</p>
+      <a class="nav-link" routerLink="/registration">sign up</a>
     </form>
   </mat-card>
 </div>
