--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link" routerLink="listStreamers">Streamerlijst</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="Profile">Profiel</a>
+          <a class="nav-link" routerLink="profile">Profiel</a>
         </li>
         <li class="nav-item">
           <a
@@ -33,7 +33,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="Login">Login</a>
+          <a class="nav-link" routerLink="login">Login</a>
         </li>
       </ul>
       <form class="d-flex">
