--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -22,16 +22,21 @@
         </div>
         <div class="col">
             <div class="vidBox">
-            <video id="webcam" autoplay></video>
+                <video #videoPlayer autoplay></video>
             </div>
         </div>
         </div>
         <div class="row">
-        <div class="col buttonrow">
-            <button class="button" (click)="startStream()" value="Start stream" >Start stream</button>
-            <button class="button" (click)="endStream()" value="End stream" >End stream</button>
-            <button class="button" (click)="cameraOn()" value="Camera aan" >SeeChange aan</button>
-            <button class="button" (click)="cameraOff()" value="Camera uit" >SeeChange uit</button>
+            <div class="col buttonrow">
+                <button class="button" (click)="startStream()" [disabled]="recording" value="Start stream" >Start stream</button>
+                <button class="button" (click)="endStream()" [disabled]="!recording" value="End stream" >End stream</button>
+                <button class="button" (click)="cameraOn()" value="Camera aan" >SeeChange aan</button>
+                <button class="button" (click)="cameraOff()" value="Camera uit" >SeeChange uit</button>
+            </div>
         </div>
-    </div>
+        <div class="row">
+            <div class="col">
+                
+            </div>
+        </div>
 </div>
