--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link" routerLink="listStreamers">Streamerlijst</a>
         </li>
         <li>
-          <a class="nav-link" routerLink="/broadcast">Broadcast</a>
+          <a class="nav-link" routerLink="broadcast">Broadcast</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="profile">Profiel</a>
