--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -1,11 +1,11 @@
-<div class="card shadow-sm">
+<div class="card shadow-sm my-2">
 
-    <div class="card-header">
+    <div class="card-header rounded-0">
         <div class="card-title">
             <h3>{{User.userName}}</h3>
         </div>
     </div>
-    <img src="https://cdnb.artstation.com/p/assets/images/images/032/092/715/large/max-white-guy.jpg?1605462631" class="card-img-top" alt="...">
+    <img src="https://cdnb.artstation.com/p/assets/images/images/032/092/715/large/max-white-guy.jpg?1605462631" class="card-img-top rounded-0" alt="...">
     <div class="card-body">
         <span *ngIf=User.isOnline>
             <p>Status: Online <span class="online">●</span></p>
