--- a/src/app/shared/nav/nav.component.css
+++ b/src/app/shared/nav/nav.component.css
@@ -1,53 +1,74 @@
 :host {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
-    Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  font-size: 14px;
-  color: #333;
-  box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+    font-size: 14px;
+    color: #333;
+    box-sizing: border-box;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .spacer {
-  flex: 1;
+    flex: 1;
 }
 
 .dropdown-menu.show {
-  background-color: #f5f5dc;
+    background-color: #f5f5dc;
 }
 
 .dropdown-item:hover {
-  background-color: unset;
-  color: unset;
+    background-color: unset;
+    color: unset;
 }
 
 .toolbar {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  color: white;
-  font-weight: 600;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    color: white;
+    font-weight: 600;
 }
 
+
+/* .active {
+    font-size: 1.2rem;
+    color: white !important;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    color: white;
+}
+
+.nav-link:hover {
+    color: white;
+    transform: scale(0.95);
+    transition: 0.3s;
+}
+
+.nav-link:hover::after {
+    transition: 1s;
+    transform: scale(1);
+} */
+
 .toolbar img {
-  margin: 0 16px;
+    margin: 0 16px;
 }
 
 .toolbar #twitter-logo {
-  height: 40px;
-  margin: 0 8px;
+    height: 40px;
+    margin: 0 8px;
 }
 
 .toolbar #youtube-logo {
-  height: 40px;
-  margin: 0 16px;
+    height: 40px;
+    margin: 0 16px;
 }
 
 .toolbar #twitter-logo:hover,
 .toolbar #youtube-logo:hover {
-  opacity: 0.8;
+    opacity: 0.8;
 }
