--- a/src/app/pages/broadcast/chat-stream/chat-stream.component.html
+++ b/src/app/pages/broadcast/chat-stream/chat-stream.component.html
@@ -1,12 +1,15 @@
 <div class="container">
     <h1>Chat</h1>
-    <div class="chat-container">
-        <div class="media user-message">
+    <div class="chat-container" *ngFor="let mess of ListOfChats;">
+
+        <!-- <div class="media bot-message">
             <div class="media-body">
-                <h5 class="mt-0">User</h5>
-                <p>Hello, how can I help you?</p>
+                <h5 class="mt-0">{{ mess.Writer }}</h5>
+                <p>{{ mess.Message }}</p>
+                <p>{{ mess.DateOfWriting }}</p>
             </div>
-        </div>
+        </div> -->
+
         <div class="media bot-message">
             <div class="media-body">
                 <h5 class="mt-0">Bot</h5>
@@ -17,16 +20,32 @@
     <div class="chat-box">
 
         <!-- Chat reageer pagina -->
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Reageer in de chat.</label>
-            <textarea [value]="text" (input)="onValueChange($event)" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        <div class="mt-3">
+            <form #addComment="ngForm" (submit)="SendMessage()">
+                <textarea 
+                class="form-control" 
+                id="CommentInput" 
+                rows="3" 
+                name="Message" 
+                [(ngModel)]="currentChatBox!.Message"
+                #Message="ngModel"
+                minlength="1"
+                maxlength="300"
+                required>
+            </textarea>
+
+            <!-- <div *ngIf="Message.invalid && Message.touched" class="invalid-input">
+                    <div *ngIf="Message.invalid">
+                        <div class="errorMessage">
+                            <h3>Foute invoer</h3>
+                            <p>Voer iets in</p>
+                        </div>
+                    </div>
+                </div> -->
+                <button class="btn btn-info mt-2" [disabled]="IsBusy" [disabled]="addComment.invalid">Verstuur bericht</button>
+            </form>
+
         </div>
-        <button class="btn btn-info" (click)="SendMessage()" [disabled]="IsBusy">Klik</button>
-        <p>Tekst {{text}}</p>
-
-        <form action="">
-
-        </form>
     </div>
 
 </div>
