--- a/src/app/pages/broadcast/chat-stream/chat-stream.component.html
+++ b/src/app/pages/broadcast/chat-stream/chat-stream.component.html
@@ -1,21 +1,16 @@
 <div class="container">
     <h1>Chat</h1>
-    <div class="chat-container" *ngFor="let mess of ListOfChats;">
+    <div class="chat-container">
 
-        <!-- <div class="media bot-message">
+        <div [ngClass]="WriterId == mess.writer.id ? 'own-message' : (HostUserId == mess.writer.id ? 'bot-message' : 'user-message')" 
+        class="media" *ngFor="let mess of ListOfChats;">
             <div class="media-body">
-                <h5 class="mt-0">{{ mess.Writer }}</h5>
-                <p>{{ mess.Message }}</p>
-                <p>{{ mess.DateOfWriting }}</p>
-            </div>
-        </div> -->
-
-        <div class="media bot-message">
-            <div class="media-body">
-                <h5 class="mt-0">Bot</h5>
-                <p>Here is a response from the bot.</p>
+                <h5 class="mt-0">{{ mess.writer.userName }}</h5>
+                <p>{{ mess.message }}</p>
+                <p>{{ mess.date }}</p>
             </div>
         </div>
+
     </div>
     <div class="chat-box">
 
