added feedback when user enters wrong password or username

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -74,7 +74,9 @@
       Sign in
     </button>
   </div>
-
+  <div *ngIf="wrongPwOrUserName">
+    <p>Gerbruikersnaam of wachtwoord klopt niet</p>
+  </div>
   <p>
     <a routerLink="/">Homepage</a> |
     <a routerLink="/register">Register</a>
