--- a/src/app/pages/homepage/online-list/user-card/user-card.component.html
+++ b/src/app/pages/homepage/online-list/user-card/user-card.component.html
@@ -1,6 +1,6 @@
 <div class="card shadow-sm my-2">
 
-    <div class="card-header rounded-0">
+    <div class="card-header">
         <div class="card-title">
             <h3>{{User.userName}}</h3>
         </div>
