--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -37,6 +37,6 @@
   </div>
   <p>
     <a routerLink="/">Home</a> |
-    <a routerLink="/register">Registreer</a>
+    <a routerLink="/registration">Registreer</a>
   </p>
 </form>
