--- a/src/app/pages/registration/registration-page/registration-page.component.html
+++ b/src/app/pages/registration/registration-page/registration-page.component.html
@@ -1,22 +1,63 @@
-<div fxLayoutAlign="center center" fxFlexFill>
-  <mat-card fxFlex="25">
-    <form fxLayoutAlign="stretch" fxLayout="column">
-      <mat-form-field>
-        <input matInput placeholder="Vul Gebruikersnaam in" />
-      </mat-form-field>
+<!--<div fxLayoutAlign="center center" fxFlexFill>-->
+<!--  <mat-card fxFlex="25">-->
+<!--    <form fxLayoutAlign="stretch" fxLayout="column">-->
+<!--      <mat-form-field>-->
+<!--        <input matInput placeholder="Vul Email in" />-->
+<!--      </mat-form-field>-->
 
-      <mat-form-field>
-        <input matInput type="password" matInput placeholder="Wachtwoord" />
-      </mat-form-field>
-      <mat-form-field>
-        <input
-          matInput
-          type="password"
-          matInput
-          placeholder="Vul Wachtwoord opnieuw in"
-        />
-      </mat-form-field>
-      <button mat-raised-button type="submit">Registreer</button>
-    </form>
-  </mat-card>
-</div>
+<!--      <mat-form-field>-->
+<!--        <input matInput matInput placeholder="Vul Gebruikersnaam in" />-->
+<!--      </mat-form-field>-->
+<!--      <button mat-raised-button type="submit">Registreer</button>-->
+<!--    </form>-->
+<!--  </mat-card>-->
+<!--</div>-->
+<!--###########################################################################################-->
+<form class="form-signin" [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <div class="form-group">
+    <label for="inputEmail">Email</label>
+    <input type="email" class="form-control" placeholder="email" formControlName="email" email id="inputEmail"
+           [ngClass]="{
+        'is-invalid':
+          registerForm.get('email')?.invalid &&
+          registerForm.get('email')?.touched
+      }" />
+    <span *ngIf="
+        !registerForm.get('email')?.valid && registerForm.get('email')?.touched
+      " class="invalid-feedback">
+      <p id="email-invalid">Voer een geldige email in</p>
+    </span>
+  </div>
+  <div class="form-group">
+  <label for="inputUserName">Gebruikersnaam</label>
+  <input type="userName" class="form-control" placeholder="userName" formControlName="userName" id="inputUserName"
+         [ngClass]="{
+        'is-invalid':
+          registerForm.get('userName')?.invalid &&
+          registerForm.get('userName')?.touched
+      }" />
+  <span *ngIf="
+        !registerForm.get('userName')?.valid && registerForm.get('userName')?.touched
+      " class="invalid-feedback">
+      <p id="userName-invalid">Voer een geldige gebruikersnaam in</p>
+    </span>
+
+  </div>
+
+  <div class="form-group">
+    <input type="checkbox" formControlName="role"  name="role" id="InputRole"> Administrator rol
+  </div>
+
+  <div class="form-group">
+    <button id="submitbutton" class="btn btn-lg btn-primary btn-block" type="submit" [disabled]="!registerForm.valid">
+      Registreren
+    </button>
+  </div>
+<!--  <div *ngIf="wrongPwOrUserName">-->
+<!--    <p>Gebruikersnaam of wachtwoord is onjuist</p>-->
+<!--  </div>-->
+  <p>
+    <a routerLink="/">Home</a> |
+    <a routerLink="/login">Login</a>
+  </p>
+</form>
