--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -1,7 +1,4 @@
-<p>profile-page works!</p>
-
-<form class="form-signin" [formGroup]="pfpForm" (ngSubmit)="onSubmit()">
-
+<form (ngSubmit)="onSubmit()">
     <p>
         <label for="Profielfoto">Profielfoto</label>
     </p>
@@ -15,5 +12,11 @@
         <span *ngIf="!PfpUser || !PfpUser.Pfp">
             Geen afbeelding geselecteerd.
         </span>
+    </div>
+
+    <div class="form-group">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">
+            Aanmelden
+        </button>
     </div>
 </form>
