--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -2,12 +2,17 @@
     <p>
         <label for="Profielfoto">Profielfoto</label>
     </p>
-    <input placeholder="Upload je profielfoto." type="file" id="file" (change)="onSelectFile($event)"
-        name="Profielfoto">
+    <input
+        placeholder="Upload je profielfoto."
+        type="file"
+        id="file"
+        (change)="onSelectFile($event)"
+        name="Profielfoto"
+    />
     <div class="ImageSelector">
         Afbeelding geselecteerd:<br />
         <span *ngIf="pfpUser && pfpUser.Pfp">
-            Afbeeldingsnaam: {{pfpUser.Pfp.ImageName}}
+            Afbeeldingsnaam: {{ pfpUser.Pfp.ImageName }}
         </span>
         <span *ngIf="!pfpUser || !pfpUser.Pfp">
             Geen afbeelding geselecteerd.
@@ -16,7 +21,7 @@
 
     <div class="form-group">
         <button class="btn btn-lg btn-primary btn-block" type="submit">
-            Aanmelden
+            aanpassen
         </button>
     </div>
 </form>
