--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
             <!-- Where Chat comes -->
-            <app-chat-stream></app-chat-stream>
+            <app-chat-stream [HostUserId]="HostId"></app-chat-stream>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
             <app-streaming-player></app-streaming-player>
