--- a/src/app/pages/broadcast/streaming-player/streaming-player.component.html
+++ b/src/app/pages/broadcast/streaming-player/streaming-player.component.html
@@ -1,7 +1,23 @@
-<div>
-    <video width="1020" height="540" controls>
-        <source src="movie.mp4" type="video/mp4">
-        <source src="movie.ogg" type="video/ogg">
-        Your browser does not support the video tag.
+<!--<div>-->
+<!--    <video width="1020" height="540" controls>-->
+<!--        <source [src]="getVideoUrl()" type="video/mp4">-->
+<!--        Your browser does not support the video tag.-->
+<!--    </video>-->
+<!--</div>-->
+
+<div id="video-container">
+    <video id="live-video" controls autoplay>
+        <source [src]="streamBlob" type="video/mp4">
     </video>
 </div>
+
+
+<!--<div *ngIf="images.length > 0">-->
+<!--    <img-->
+<!--            *ngFor="let image of images"-->
+<!--            width="150"-->
+<!--            style="margin-right: 5px"-->
+<!--            [src]="image.imageHeaders + image.imageBinary"-->
+<!--    />-->
+<!--</div>-->
+
