Added comment in broadcast page

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <!-- Where Chat comes -->
+            <!-- TODO add host Id when stream function is done -->
                 <app-chat-stream></app-chat-stream>
         </div>
         <div class="col">
