--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -10,6 +10,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
+            <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.Id"></app-view-count>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-9 moveLeft10">
             <div class="container py-5">
