Reverted User to camelCasing

--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -11,13 +11,13 @@
                                      style="width: 180px; border-radius: 10px;">
                             </div>
                             <div class="flex-grow-1 ms-3">
-                                <h5 class="mb-1">{{user?.UserName}}</h5>
-                                <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.Email}}</p>
+                                <h5 class="mb-1">{{user?.userName}}</h5>
+                                <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.email}}</p>
                                 <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                                      style="background-color: #efefef;">
                                     <div>
                                         <p class="small text-muted mb-1">Bitconnect Balance</p>
-                                        <p class="mb-0">{{user?.Balance}}</p>
+                                        <p class="mb-0">{{user?.balance}}</p>
                                     </div>
 
                                 </div>
