--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -12,7 +12,7 @@
                             </div>
                             <div class="flex-grow-1 ms-3">
                                 <h5 class="mb-1">{{user?.UserName}}</h5>
-                                <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.Email}}</p>
+                                <p class="mb-2 pb-1" style="color: #2b2a2a;">{{user?.UserName}}</p>
                                 <div class="d-flex justify-content-start rounded-3 p-2 mb-2"
                                      style="background-color: #efefef;">
                                     <div>
