--- a/src/app/pages/broadcast/streaming-player/streaming-player.component.html
+++ b/src/app/pages/broadcast/streaming-player/streaming-player.component.html
@@ -1,23 +1,7 @@
-<!--<div>-->
-<!--    <video width="1020" height="540" controls>-->
-<!--        <source [src]="getVideoUrl()" type="video/mp4">-->
-<!--        Your browser does not support the video tag.-->
-<!--    </video>-->
-<!--</div>-->
 
-<div id="video-container">
-    <video id="live-video" controls autoplay>
-        <source [src]="streamBlob" type="video/mp4">
-    </video>
+<!-- streaming-player.component.html -->
+<div>
+    <button (click)="playVideo()">Play Video</button>
+    <hr>
+    <video width="840" height="440" [src]="url" controls></video>
 </div>
-
-
-<!--<div *ngIf="images.length > 0">-->
-<!--    <img-->
-<!--            *ngFor="let image of images"-->
-<!--            width="150"-->
-<!--            style="margin-right: 5px"-->
-<!--            [src]="image.imageHeaders + image.imageBinary"-->
-<!--    />-->
-<!--</div>-->
-
