--- a/src/app/pages/homepage/online-list/online-list.component.html
+++ b/src/app/pages/homepage/online-list/online-list.component.html
@@ -5,6 +5,10 @@
         <button class="btn btn-primary mx-1 my-2" (click)="toggleSortOrder('desc')">Descending</button>
         <button class="btn btn-primary mx-1 my-2" (click)="toggleSortOrder('status')">Status</button>
     </div>
+    <div *ngIf="!hasIntigrety">
+        <h1 style="color: red">WAARSCHUWING, DE DATA VAN DEZE REQUEST IS NIET INTEGER. HET KAN ZIJN DAT IEMAND DE DATA HEEFT VERANDERD</h1>
+    </div>
+
     <h1>Lijst transparante gebruikers</h1>
     <!-- <select id="sortOrder ">
         <option value="asc ">Naam</option>
