--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -1,4 +1,7 @@
 <ng-container>
+    <div *ngIf="!hasIntegrity">
+        <h1 style="color: red">WAARSCHUWING, DE DATA VAN DEZE REQUEST IS NIET INTEGER. HET KAN ZIJN DAT IEMAND DE DATA HEEFT VERANDERD</h1>
+    </div>
     <section class="vh-100" style="background-color: #9de2ff;">
         <div class="container py-5 h-100">
             <div class="row d-flex justify-content-center align-items-center h-100">
@@ -33,5 +36,4 @@
             </div>
         </div>
     </section>
-
 </ng-container>
