Changed capitalId to lowercase id

--- a/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
+++ b/src/app/pages/broadcast/broadcast-page/broadcast-page.component.html
@@ -1,8 +1,8 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <!-- TODO add host Id when stream function is done -->
-            <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.Id"></app-view-count>
+            <!-- TODO add host id when stream function is done -->
+            <app-view-count [HostId]="HostId" [isStreamer]="true" [StreamId]="NewStream.id"></app-view-count>
         </div>
         <div class="col">
             <div class="vidBox">
