--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
             <div class="viewCountWrapper">
-                <app-viewer-count [isStreamer] = false></app-viewer-count>
+                <app-viewer-count [isStreamer] = false [StreamId]="1"></app-viewer-count>
             </div>
 
             <app-streaming-player></app-streaming-player>
@@ -14,7 +14,7 @@
     </div>
     <div class="row">
         <div class="col-sm-6 col-md-4 col-lg-3">
-            <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.Id"></app-view-count>
+            <app-view-count [HostId]="HostId" [isStreamer]="false" [StreamId]="NewStream.id"></app-view-count>
         </div>
         <div class="col-sm-5 col-md-8 col-lg-9 moveLeft10">
             <div class="container py-5">
