--- a/src/app/pages/profile/profile-page/profile-page.component.html
+++ b/src/app/pages/profile/profile-page/profile-page.component.html
@@ -11,8 +11,7 @@
                         <div class="card-body p-4">
                             <div class="d-flex text-black">
                                 <div class="flex-shrink-0">
-                                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-profiles/avatar-1.webp"
-                                        alt="Generic placeholder image" class="img-fluid"
+                                    <img [src]="user?.base64Image" alt="Generic placeholder image" class="img-fluid"
                                         style="width: 180px; border-radius: 10px;">
                                 </div>
                                 <div class="flex-grow-1 ms-3">
@@ -35,10 +34,10 @@
                                                 (change)="onSelectFile($event)" name="Profielfoto" />
                                             <div class="ImageSelector">
                                                 Afbeelding geselecteerd:<br />
-                                                <span *ngIf="pfpUser && pfpUser.Base64Image">
-                                                    Afbeeldingsnaam: {{ pfpUser.ImageName }}
+                                                <span *ngIf="pfpUser && pfpUser.base64Image">
+                                                    Afbeeldingsnaam: {{ pfpUser.imageName }}
                                                 </span>
-                                                <span *ngIf="!pfpUser || !pfpUser.Base64Image">
+                                                <span *ngIf="!pfpUser || !pfpUser.base64Image">
                                                     Geen afbeelding geselecteerd.
                                                 </span>
                                             </div>
