--- a/src/app/pages/broadcast/stream-page/stream-page.component.html
+++ b/src/app/pages/broadcast/stream-page/stream-page.component.html
@@ -6,7 +6,7 @@
         </div>
         <div class="col-sm-5 col-md-8 col-lg-6">
             <div class="viewCountWrapper">
-                <app-viewer-count [isStreamer] = false [StreamId]="1"></app-viewer-count>
+                <app-viewer-count [isStreamer] = false [StreamId]="NewStream.id"></app-viewer-count>
             </div>
 
             <app-streaming-player></app-streaming-player>
